tests/build/cases/widget/module_path_missing_dollar_sign.stderr
error: expected a macro_rules `$crate` path to this widget mod
 --> cases/widget/module_path_missing_dollar_sign.rs:4:10
  |
4 | #[widget(crate::widget)]
  |          ^^^^^

error[E0432]: unresolved import `$crate`
 --> cases/widget/module_path_missing_dollar_sign.rs:4:1
  |
4 | #[widget(crate::widget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^ could not find `missing_widget_path` in the crate root
  |
  = note: this error originates in the macro `__widget_path__missing_widget_path__` (in Nightly builds, run with -Z macro-backtrace for more info)
